force-app/main/default/objects/afl__afl_Article_Feedback__c/afl__afl_Article_Feedback__c.object-meta.xml
<CustomObject>
    <label>Article Feedback</label>
    <nameField>
        <label>Article Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>