force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Action_Date__c.field-meta.xml
<CustomField>
    <fullName>afl__Action_Date__c</fullName>
    <label>Action Taken Date</label>
    <type>Date</type>
</CustomField>