force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>afl__Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Article Archived</fullName>
            </value>
            <value>
                <fullName>Article Updated</fullName>
            </value>
            <value>
                <fullName>No Action Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>