force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Article_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>afl__Article_Created_Date__c</fullName>
    <label>Article Created Date</label>
    <type>DateTime</type>
</CustomField>