force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Article_Link__c.field-meta.xml
<CustomField>
    <fullName>afl__Article_Link__c</fullName>
    <label>Article Link</label>
    <type>Url</type>
</CustomField>