force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Article_Title__c.field-meta.xml
<CustomField>
    <fullName>afl__Article_Title__c</fullName>
    <label>Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>