force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Article_Version__c.field-meta.xml
<CustomField>
    <fullName>afl__Article_Version__c</fullName>
    <label>Article Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>