force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>afl__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>afl_Article_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>