force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Community_Name__c.field-meta.xml
<CustomField>
    <fullName>afl__Community_Name__c</fullName>
    <label>Community Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>