force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Feedback_Reason__c.field-meta.xml
<CustomField>
    <fullName>afl__Feedback_Reason__c</fullName>
    <description>Reason provided for feedback</description>
    <label>Feedback Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>