force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Feedback_Reason_Developer_Value__c.field-meta.xml
<CustomField>
    <fullName>afl__Feedback_Reason_Developer_Value__c</fullName>
    <label>Feedback Reason (Developer Value)</label>
    <type>TextArea</type>
</CustomField>