force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Feedback_Source__c.field-meta.xml
<CustomField>
    <fullName>afl__Feedback_Source__c</fullName>
    <label>Feedback Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Communities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>