force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Feedback_Vote_Description__c.field-meta.xml
<CustomField>
    <fullName>afl__Feedback_Vote_Description__c</fullName>
    <label>Feedback from Rating</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>