force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>afl__Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>