force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Knowledge_kav_article_Id__c.field-meta.xml
<CustomField>
    <fullName>afl__Knowledge_kav_article_Id__c</fullName>
    <description>Holds the value of the field KnowledgeArticleId from the Knowledge__kav object. Used for register/retrieve the vote on the Vote object for a Knowledge Article</description>
    <label>Knowledge kav article Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>