force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Last_Published_By__c.field-meta.xml
<CustomField>
    <fullName>afl__Last_Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>afl_Article_Feedback_Published</relationshipName>
    <type>Lookup</type>
</CustomField>