force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Last_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>afl__Last_Published_Date__c</fullName>
    <label>Last Published Date</label>
    <type>DateTime</type>
</CustomField>