force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Like__c.field-meta.xml
<CustomField>
    <fullName>afl__Like__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Like</label>
    <type>Checkbox</type>
</CustomField>