force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Originated_From_Trigger__c.field-meta.xml
<CustomField>
    <fullName>afl__Originated_From_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the Article Feedback originated from the trigger</description>
    <label>Originated From Trigger</label>
    <type>Checkbox</type>
</CustomField>