force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Parent_FeedItem__c.field-meta.xml
<CustomField>
    <fullName>afl__Parent_FeedItem__c</fullName>
    <label>Parent FeedItem</label>
    <length>18</length>
    <type>Text</type>
</CustomField>