force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>afl__Record_Type__c</fullName>
    <label>Article Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>