force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Thumb_Vote__c.field-meta.xml
<CustomField>
    <fullName>afl__Thumb_Vote__c</fullName>
    <label>Thumb Vote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thumbs_up</fullName>
                <label>Thumbs up</label>
            </value>
            <value>
                <fullName>Thumbs_down</fullName>
                <label>Thumbs down</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>