force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/afl__Unlike_Reason__c.field-meta.xml
<CustomField>
    <fullName>afl__Unlike_Reason__c</fullName>
    <label>Feedback Reason Picklist Values</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>afl__Thumb_Vote__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I have an idea how to make the article even better</fullName>
            </value>
            <value>
                <fullName>Thank you Knowledge team!</fullName>
            </value>
            <value>
                <fullName>Information inaccurate</fullName>
            </value>
            <value>
                <fullName>Not enough information</fullName>
            </value>
            <value>
                <fullName>Please review style grammar spelling</fullName>
                <label>Please review style, grammar, spelling</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Does not Work</fullName>
                <isActive>false</isActive>
                <label>Does not Work</label>
            </value>
            <value>
                <fullName>Link broken</fullName>
                <isActive>false</isActive>
                <label>Link broken</label>
            </value>
            <value>
                <fullName>Outdated</fullName>
                <isActive>false</isActive>
                <label>Outdated</label>
            </value>
            <value>
                <fullName>Outdated  (needs update)</fullName>
                <isActive>false</isActive>
                <label>Outdated  (needs update)</label>
            </value>
            <value>
                <fullName>Poorly Written</fullName>
                <isActive>false</isActive>
                <label>Poorly Written</label>
            </value>
            <value>
                <fullName>Positive feedback</fullName>
                <isActive>false</isActive>
                <label>Positive feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>