force-app/main/default/objects/afl__afl_Article_Feedback__c/fields/Unlike__c.field-meta.xml
<CustomField>
    <fullName>Unlike__c</fullName>
    <formula>AND( NOT(ISBLANK( afl__Feedback_Reason__c)),  afl__Like__c = false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unlike</label>
    <type>Checkbox</type>
</CustomField>