force-app/main/default/objects/afl__afl_Article_Feedback__c/recordTypes/afl__recordTypeGetPicklist.recordType-meta.xml
<RecordType>
    <fullName>afl__recordTypeGetPicklist</fullName>
    <active>true</active>
    <description>record type needed to use get picklist values for reason picklist</description>
    <label>recordTypeGetPicklist</label>
</RecordType>