force-app/main/default/objects/afl__afl_Article_Feedback__c/listViews/afl__My_Feedback_All.listView-meta.xml
<ListView>
    <fullName>afl__My_Feedback_All</fullName>
    <columns>NAME</columns>
    <columns>afl__Article_Number__c</columns>
    <columns>afl__Article_Title__c</columns>
    <columns>afl__Feedback_Status__c</columns>
    <columns>afl__Assigned_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>afl__Action_Due_Date__c</columns>
    <columns>afl__Action_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>afl__Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Feedback - All</label>
</ListView>