force-app/main/default/objects/afl__afl_Article_Feedback__c/listViews/afl__New_Feedback.listView-meta.xml
<ListView>
    <fullName>afl__New_Feedback</fullName>
    <columns>NAME</columns>
    <columns>afl__Article_Number__c</columns>
    <columns>afl__Article_Title__c</columns>
    <columns>afl__Feedback_Status__c</columns>
    <columns>afl__Assigned_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>afl__Action_Due_Date__c</columns>
    <columns>afl__Action_Taken__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>afl__Feedback_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>afl__Assigned_To__c</field>
        <operation>equals</operation>
    </filters>
    <label>New Feedback</label>
</ListView>